apk release by jun

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "22.0.1"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
-        applicationId "com.example.fft_phonebook.mwc"
+        applicationId "com.junwow.fft_phonebook.jun"
         minSdkVersion 11
         targetSdkVersion 23
         versionCode 1
